force-app/main/default/objects/Cruise_Bookingg__c/Cruise_Bookingg__c.object-meta.xml
<CustomObject>
    <label>Cruise Bookingg</label>
    <nameField>
        <displayFormat>CBID-{00000000}</displayFormat>
        <label>CBID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cruise Bookings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>