force-app/main/default/objects/Cruise_Bookingg__c/fields/Additionalincome__c.field-meta.xml
<CustomField>
    <fullName>Additionalincome__c</fullName>
    <label>Additionalincome</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>