force-app/main/default/objects/Cruise_Bookingg__c/fields/ceheck_out_date__c.field-meta.xml
<CustomField>
    <fullName>ceheck_out_date__c</fullName>
    <formula>check_in__c  +  (week__c  * 7)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ceheck out(date)</label>
    <type>Date</type>
</CustomField>