force-app/main/default/objects/Cruise_Bookingg__c/fields/check_in__c.field-meta.xml
<CustomField>
    <fullName>check_in__c</fullName>
    <label>check in</label>
    <type>Date</type>
</CustomField>