force-app/main/default/objects/Cruise_Bookingg__c/fields/Hospitals__c.field-meta.xml
<CustomField>
    <fullName>Hospitals__c</fullName>
    <label>Hospitals</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Route__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hospital1</fullName>
            </value>
            <value>
                <fullName>Hospital2</fullName>
            </value>
            <value>
                <fullName>Hospital3</fullName>
            </value>
            <value>
                <fullName>Hospital4</fullName>
            </value>
            <value>
                <fullName>Hospital5</fullName>
            </value>
            <value>
                <fullName>Hospital6</fullName>
            </value>
            <value>
                <fullName>Hospital7</fullName>
            </value>
            <value>
                <fullName>Hospital8</fullName>
            </value>
            <value>
                <fullName>Hospital9</fullName>
            </value>
            <value>
                <fullName>Hospital10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>