force-app/main/default/objects/Cruise_Bookingg__c/fields/isspecialeventneeded__c.field-meta.xml
<CustomField>
    <fullName>isspecialeventneeded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isspecialeventneeded</label>
    <type>Checkbox</type>
</CustomField>