force-app/main/default/objects/Cruise_Bookingg__c/fields/TotalPassenger__c.field-meta.xml
<CustomField>
    <fullName>TotalPassenger__c</fullName>
    <label>TotalPassenger</label>
    <summaryForeignKey>Passenger__c.Cruise_Bookingg__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>