force-app/main/default/objects/Cruise_Bookingg__c/fields/TotalRoom__c.field-meta.xml
<CustomField>
    <fullName>TotalRoom__c</fullName>
    <label>TotalRoom</label>
    <summaryForeignKey>Date_Booking_To_Room__c.Cruise_Bookingg__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>