force-app/main/default/objects/Cruise_Bookingg__c/fields/week__c.field-meta.xml
<CustomField>
    <fullName>week__c</fullName>
    <label>week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>